# lclstreamer

./: .dockerignore  pyproject.toml
.github/workflows/: docker-build-push.yml  test.yml
container/: Containerfile  README.md
container/amsc-peaknet-2026/: Containerfile  Containerfile.psana1  README.md
docs/source/: configuration_data_handlers.md  configuration_data_sources.md
examples/: lclstreamer-internal.yaml  lclstreamer-psana1-simplon.yml  lclstreamer-psana1-to-sdfada-with-preprocessing.yaml  lclstreamer-psana1-to-sdfada.yaml  lclstreamer-psana1.yaml  lclstreamer-psana2-dials.yaml  lclstreamer-psana2-mfx.yaml  lclstreamer-psana2-simplon.yml  producer_raw.yaml
scripts/: podman_build.sh
src/lclstreamer/cmd/: lclstreamer.py
src/lclstreamer/data_handlers/streaming/: binary.py
src/lclstreamer/data_serializers/dectris/: simplon.py
src/lclstreamer/event_data_sources/generic/: data_sources.py  event_sources.py
src/lclstreamer/event_data_sources/psana1/: data_sources.py
src/lclstreamer/event_data_sources/psana2/: data_sources.py  event_sources.py
src/lclstreamer/models/: parameters.py
src/lclstreamer/processing_pipelines/common/: data_storage.py
src/lclstreamer/processing_pipelines/crystallography/: peaknet.py
src/lclstreamer/utils/: logging.py
tests/psana1/: test_psana1_data_sources.py
tests/psana2/: test_data_storage.py  test_detector_interface_psana2.py  test_psana2_data_sources.py  test_psana2_integration.py
