[project]
name = "lclstreamer"
requires-python = ">=3.11,<3.14"
version = "0.3.0"
dependencies = [
    "typer",
    "numpy",
    "pydantic",
    "stream @ git+https://github.com/frobnitzem/stream.py",
    "aiostream",
    "pyyaml",
    "pyzmq",
    "pynng",
    "sphinx",
    "myst-parser",
    "pydata-sphinx-theme",
    "sphinx-click",
    "sphinxcontrib-images",
    "sphinxcontrib-mermaid",
    "mypy",
    "h5py-stubs",
    "cbor",
    "pytest",
    "types-PyYAML",
    "mpi4py",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project.scripts]
lclstreamer = "lclstreamer.cmd.lclstreamer:app"

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"

[tool.isort]
py_version = 311
profile = "black"

[tool.mypy]
show_error_codes = true
python_version = 3.11

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.feature.psana1]
channels = ["lcls-i"]

[tool.pixi.feature.psana2]
channels = ["lcls-ii"]

[tool.pixi.feature.psana2nersc]
channels = ["lcls-ii"]

[tool.pixi.pypi-dependencies]
lclstreamer = { path = ".", editable = false }

[tool.pixi.environments]
psana1 = ["psana1"]
psana2 = ["psana2"]
psana2nersc = ["psana2nersc"]

[tool.pixi.feature.psana1.activation]
scripts = ["activation-psana1.sh"]

[tool.pixi.feature.psana2.activation]
scripts = ["activation-psana2.sh"]

[tool.pixi.feature.psana2nersc.activation]
scripts = ["activation-psana2.sh"]

[tool.pixi.dependencies]
python = ">=3.11,<3.14"
h5py = "*"
hdf5plugin = ">=5.1.0"
bitshuffle = "*"

[tool.pixi.feature.psana1.dependencies]
python = "3.11.*"
psana = "==4.0.66"
openmpi = "*"
prometheus-cpp = "*"

[tool.pixi.feature.psana2.dependencies]
python = "3.13.*"
psana = { version="==4.3.1", channel="lcls-ii" }
openmpi = "*"
prometheus-cpp = { version=">=1.3.0,<1.4.0", channel="conda-forge" }

[tool.pixi.feature.psana2nersc.dependencies]
python = "3.13.*"
psana = { version="==4.3.1", channel="lcls-ii" }
prometheus-cpp = { version=">=1.3.0,<1.4.0", channel="conda-forge" }

[tool.pixi.tasks]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
