[project]
name = "lclstreamer"
requires-python = ">=3.11,<3.14"
version = "0.3.0"
dependencies = [
    "typer",
    "numpy",
    "pydantic",
    "stream @ git+https://github.com/frobnitzem/stream.py",
    "aiostream",
    "pyyaml",
    "pyzmq",
    "pynng",
    "sphinx",
    "myst-parser",
    "pydata-sphinx-theme",
    "sphinx-click",
    "sphinxcontrib-images",
    "sphinxcontrib-mermaid",
    "mypy",
    "h5py-stubs",
    "cbor",
    "pytest",
    "types-PyYAML"
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project.scripts]
lclstreamer = "lclstreamer.cmd.lclstreamer:app"

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"

[tool.isort]
py_version = 311
profile = "black"

[tool.mypy]
show_error_codes = true
python_version = 3.11

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.feature.psana1]
channels = ["lcls-i"]

[tool.pixi.feature.psana2]
channels = ["lcls-ii"]

# "extmpi" = external MPI: openmpi comes from the conda-forge mpi-external label,
# a stub that lets mpi4py link against the OpenMPI ABI without bundling an MPI
# implementation.
[tool.pixi.feature.psana2extmpi]
channels = ["lcls-ii", "conda-forge/label/mpi-external"]

[tool.pixi.pypi-dependencies]
lclstreamer = { path = ".", editable = true }

[tool.pixi.environments]
psana1 = ["psana1"]
psana2 = ["psana2"]
psana2extmpi = ["psana2extmpi"]

[tool.pixi.feature.psana1.activation]
scripts = ["activation-psana1.sh"]

[tool.pixi.feature.psana2.activation]
scripts = ["activation-psana2.sh"]

[tool.pixi.feature.psana2extmpi.activation]
scripts = ["activation-psana2.sh"]

[tool.pixi.dependencies]
python = ">=3.11,<3.14"
h5py = { version="*", channel="conda-forge" }
hdf5plugin = { version="*", channel="conda-forge" }
bitshuffle = { version="*", channel="conda-forge" }

[tool.pixi.feature.psana1.dependencies]
python = "3.11.*"
psana = { version="==4.0.66", channel="lcls-i" }
mpi4py = { version="*", channel="conda-forge" }

[tool.pixi.feature.psana2.dependencies]
python = "3.13.*"
psana = { version="==4.3.2", channel="lcls-ii" }
mpi4py = { version="*", channel="conda-forge" }
openmpi = { version="*", channel="conda-forge" }
prometheus-cpp = {version="*", channel="conda-forge" }

[tool.pixi.feature.psana2extmpi.dependencies]
python = "3.13.*"
psana = { version="==4.3.2", channel="lcls-ii" }
mpi4py = { version="*", channel="conda-forge" }
openmpi = { version="*", channel="conda-forge/label/mpi-external" }
prometheus-cpp = {version="*", channel="conda-forge" }

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
